# apexdream

./: .gitignore  Cargo.toml  apexdumper.wasm  config.ini  gamedata.ini  license.md  license.txt  readme.md
examples/: apexdream-win32.rs  gamedata.rs
offsets/: Cargo.toml  deploy.bat  deploy.sh  highlight-functions.html  index.html  readme.md  stdout.ini  stdout.md
offsets/src/: classes.rs  concommands.rs  convars.rs  datamaps.rs  globals.rs  interfaces.rs  kbuttons.rs  lib.rs  main.rs  misc.rs  recvtables.rs  string_tables.rs
src/: aimassist.cpp  aimassist.hpp  apexbot.cpp  api.rs  cheats.cpp  cheats.hpp  cheats.rs  config.cpp  config.hpp  config.rs  context.cpp  context.hpp  data.hpp  data.rs  entities.cpp  entities.hpp  hash.hpp  highlight.cpp  highlight.hpp  interface.rs  items.cpp  items.hpp  lib.rs  pid.hpp  process.cpp  process.hpp  process.rs  scripts.cpp  scripts.hpp  sdk.hpp  sdk.rs  solver.cpp  solver.hpp  state.cpp  state.hpp  state.rs  stdafx.cpp  strings.hpp
src/base/: math.rs  mod.rs  pid.rs  pool.rs  solver.rs  timer.rs
src/cheats/: aimassist.rs  debugger.rs  esp.rs  espdata.rs  espflags.rs  highlight.rs  icons.rs  observers.rs  projectile.rs  radar.rs  rcs.rs  ring.rs  scripts.rs
src/sdk/: class.rs  cvar.rs  ehandle.rs  entitylist.rs  globalvars.rs  highlight.rs  input.rs  inputsystem.rs  items.rs  pitches.rs  projectiles.rs  script_net_name.rs  studio.rs  tier1.rs
src/state/: buttons.rs  client_state.rs  derivative.rs  entities.rs  entity_list.rs  highlight.rs  input_system.rs  itemids.rs  modifiers.rs  name_list.rs  script_data.rs  (+2 more)
(+41 files in other folders)
